--- a/.github/workflows/continuosintegration.yml
+++ b/.github/workflows/continuosintegration.yml
@@ -1,7 +1,8 @@
 name: GitHub Actions Demo
 on: [push]
+
 jobs:
-  Explore-GitHub-Actions:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Check out Repository cody
