--- a/.github/workflows/continuosintegration.yml
+++ b/.github/workflows/continuosintegration.yml
@@ -1,11 +1,11 @@
-name: GitHub Actions Demo
+name: Continuos Delivery
 on:
-  pull_request:
+  push:
     branches:
       - main
-    
+
 jobs:
-  build:
+  deliver:
     runs-on: ubuntu-latest
     steps:
       - name: Check out Repository cody
@@ -15,3 +15,11 @@ jobs:
         uses: advanced-security/python-lint-code-scanning-action@v1.1.2
         with:
           linter: pylint
+
+      - name: Continuos Delivery
+        uses: actions/upload-artifact@v4
+        with:
+          name: projetozipado.zip
+          path:
+            '**.py'
+            README.md
