--- a/.github/workflows/continuosintegration.yml
+++ b/.github/workflows/continuosintegration.yml
@@ -1,34 +1,17 @@
-name: Continuos Delivery
+name: Continuous Integration
 on:
-  push:
+  pull_request:
     branches:
       - main
 
 jobs:
-  deliver:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out Repository cody
-        uses: actions/checkout@v4
+      - name: Check out repository code
+        uses: action/checkout@v4
 
       - name: Python Lint Code Scanning Action
-        uses: advanced-security/python-lint-code-scanning-action@v1.1.2
+        uses: advanced-security/python-lint-code-scanning-action@v1.1.1
         with:
           linter: pylint
-
-      - name: Continuos Delivery
-        uses: actions/upload-artifact@v4
-        with:
-          name: projetozipado.zip
-          path:
-            '**.py'
-            README.md
-  deploy:
-    runs-on: ubuntu latest
-    needs: deliver
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: projetozipado.zip
-      - name: Display structure of downloaded files
-        run: ls -R
