--- a/.github/workflows/continuousintegration.yml
+++ b/.github/workflows/continuousintegration.yml
@@ -13,6 +13,9 @@ jobs:
         with:
           linter: pylint
 
-      - name: Check out repository code
-        uses: action/checkout@v4
+      #- name: Check out repository code
+        #uses: action/checkout@v4
+
+      - name: Download a Build Artifact
+        uses: actions/download-artifact@v4.2.1
       #teerssgs
