--- a/.github/workflows/continuousdelivery.yml
+++ b/.github/workflows/continuousdelivery.yml
@@ -1,29 +1,29 @@
-#name: Continuos Delivery
-#on:
-  #push:
-    #branches:
-      #- main
+name: Continuos Delivery
+on:
+  push:
+    branches:
+      - main
 
-#jobs:
-  #deliver:
-    #runs-on: ubuntu-latest
-    #steps:
-      #- name: Check out Repository code
-        #uses: actions/checkout@v4
+jobs:
+  deliver:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out Repository code
+        uses: actions/checkout@v4
 
-      #- name: Simulando Continuous Delivery
-        #uses: actions/upload-artifact@v4
-        #with:
-          #name: projetozipado.zip
-          #path:
-            #'**.py'
-            #README.md
-  #deploy:
-    #runs-on: ubuntu latest
-    #needs: deliver
-    #steps:
-      #- uses: actions/download-artifact@v4
-        #with:
-          #name: projetozipado.zip
-      #- name: Display structure of downloaded files
-        #run: ls -R
+      - name: Simulando Continuous Delivery
+        uses: actions/upload-artifact@v4
+        with:
+          name: projetozipado.zip
+          path:
+            '**.py'
+            README.md
+  deploy:
+    runs-on: ubuntu latest
+    needs: deliver
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: projetozipado.zip
+      - name: Display structure of downloaded files
+        run: ls -R
