--- a/.github/workflows/continuousintegration.yml
+++ b/.github/workflows/continuousintegration.yml
@@ -21,7 +21,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4.2.1
     - name: Run Discord Webhook
-      uses: johnmyhuy/actions-discord-git-webhook@main
+      uses: Sniddl/discord-commits@v1.6
       with:
-        webhook_url: ${{ secrets.DISCORD_BOT}}
+        webhook: ${{ secrets.DISCORD_BOT}}
+        template: "avatar-with-link"
+        include-extras: true
 
